# pfgenerate

./: .env  .gitignore  Cargo.toml  README.md
db/: docker-compose.yml  run_redis.sh
src/: main.rs
src/authen/: callback.rs  login.rs  logout.rs  mod.rs
src/models/: configuration.rs  entra_id.rs  mod.rs  web_params.rs
src/pages/: callback.rs  error.rs  index.rs  mod.rs
src/proxy/: mod.rs  page_handler.rs  page_route_handler.rs
src/results/: result.rs
src/router/: mod.rs  page_route_handler.rs  page_router.rs
src/utils/: utils.rs
static/: index.html
