[package]
name = "pfgenerate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
diesel = { version = "2.1", features = ["mysql"] }
dotenvy = "0.15"
rust_xlsxwriter = "0.54"
actix-web = { version = "4.4",features = ["rustls-0_21"] }
oauth2 = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
actix-files = "0.6"
jsonwebtoken = {version = "9.1" , features = ["use_pem"]}
urlencoding = "2.1"
base64 = "0.21"
actix-redis = "0.13"
actix-session = {version = "0.8" , features = ["redis-actor-session"]}
